--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome..</h1>
     <script src="Callback.js"></script>
-    <script src="Promises.js"></script>
+    <!-- <script src="Promises.js"></script> -->
 </body>
 </html>
