--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome..</h1>
-    <script src="Callback.js"></script>
-    <!-- <script src="Promises.js"></script> -->
+    <!-- <script src="Callback.js"></script> -->
+    <script src="Promises.js"></script>
 </body>
 </html>
